@@ -3,6 +3,7 @@ Changed the format of error messages
 Added raise-argument-error, raise-result-error,
  raise-arguments-error, raise-range-error
 racket/contract: added procedure-arity-includes/c
+racket/sandbox: added sandbox-propagate-exceptions
 
 Version 5.3.0.8
 Required modules are instantiated in the order that they are required
